src/scss/components/_callout.scss
.callout {
  padding-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;

  @include media(sm) {
    display: flex;
    align-items: center;
    text-align: left;
    height: 100%;
  }

  @include media(lg) {
    min-height: 300px;
    flex-direction: column;
    text-align: center;
  }
}

.callout__body {
  padding-right: 1rem;

  @include media(lg) {
    padding-right: 0;
  }
}

.callout__title {
  font-size: $h2-font-size;

  @include media(lg) {
    margin-bottom: 0.5rem;
  }
}

.callout__text {
  margin-bottom: 1rem;
  font-size: $paragraph-font-size;
}

.callout__footer {
  margin-left: auto;

  @include media(lg) {
    margin-top: auto;
    margin-left: 0;
  }
}

